# odonata

./: .gitignore  Cargo.toml  build.rs  firefox.perf  makefile  pgn2.txt  rust-toolchain.toml  rustfmt.toml  test.pgn  todo.txt
.cargo/: config.toml
.github/workflows/: rust_ci.yml
benches/: benchmark.rs  iai.rs
crates/odonata/: Cargo.toml  build.rs
crates/odonata-base/: Cargo.toml  build.rs
crates/odonata-base/python/: __init__.py  odonata.py
crates/odonata-base/resources/: config.toml  eval.hce.toml  eval.me.toml  iq.epd  wac.epd
crates/odonata-base/src/: bits.rs  boards.rs  catalog.rs  clock.rs  domain.rs  eg.rs  epd.rs  lib.rs  movelist.rs  mv.rs  other.rs  piece.rs  prelude.rs  variation.rs
crates/odonata-base/src/bits/: bb_classical.rs  bb_hyperbola.rs  bb_magic.rs  bb_sliders.rs  bitboard.rs  castling.rs  mod.rs  precalc.rs  square.rs
crates/odonata-base/src/boards/: board.rs  boardcalcs.rs  hasher.rs  makemove.rs  mod.rs  movegen.rs  position.rs  repetition.rs
crates/odonata-base/src/domain/: bound.rs  info.rs  material.rs  mod.rs  node.rs  player.rs  score.rs  staticeval.rs  timecontrol.rs  tree.rs  wdl.rs
crates/odonata-base/src/eg/: endgame.rs  mod.rs  zugzwang.rs
crates/odonata-base/src/infra/: component.rs  config.rs  lockless_hashmap.rs  math.rs  metric.rs  mod.rs  param.rs  profiler.rs  resources.rs  testing.rs  tracer.rs  utils.rs  value.rs  version.rs
crates/odonata-base/src/other/: mod.rs  outcome.rs  parse.rs  perft.rs  phaser.rs  tags.rs
crates/odonata-base/src/trace/: debug.rs  logger.rs  stat.rs
crates/odonata-engine/: Cargo.toml  build.rs
crates/odonata-engine/src/: engine.rs  eval.rs  exam.rs  lib.rs  version.rs
crates/odonata-engine/src/book/: opening_book.rs  polyglot.rs
crates/odonata-engine/src/cache/: mod.rs  tt2.rs
crates/odonata-engine/src/comms/: bench.rs  mod.rs  uci_server.rs
crates/odonata-engine/src/eval/: evaluation.rs  feature.rs  hce.rs  mod.rs  network.rs  nnue.rs  recognizer.rs  scoring.rs  see.rs  vector.rs  weight.rs
crates/odonata-engine/src/search/: algo.rs  alphabeta.rs  aspiration.rs  controller.rs  counter_move.rs  engine.rs  extensions.rs  futility.rs  history_heuristic.rs  iterative_deepening.rs  killers.rs  lmp.rs  lmr.rs  mate_distance.rs  mod.rs  move_orderer.rs  move_time_estimator.rs  nmp.rs  pvs.rs  qs.rs  razor.rs  restrictions.rs  reverse_futility.rs  search_explainer.rs  search_results.rs  stack.rs  trail.rs
crates/odonata-hce/: Cargo.toml
crates/odonata-hce/src/: evaluation.rs  feature.rs  hardcoded_weights.rs  hce.rs  lib.rs  scoring.rs  see.rs  weight.rs
crates/odonata/docs/: changelog.md  python.md
crates/odonata/python/: api-design.txt
crates/odonata/resources/: config.toml
crates/odonata/src/: boards.rs  book.rs  catalog.rs  clock.rs  domain.rs  exam.rs  globals.rs  lib.rs  main.rs  movelist.rs  mv.rs  piece.rs  position.rs  prelude.rs  tune.rs  variation.rs
crates/odonata/src/bits/: bb_classical.rs  bb_hyperbola.rs  bb_magic.rs  bitboard.rs  castling.rs  precalc.rs  square.rs
crates/odonata/src/boards/: board.rs  boardcalcs.rs  makemove.rs  movegen.rs  repetition.rs
crates/odonata/src/book/: opening_book.rs  polyglot.rs
crates/odonata/src/cache/: hasher.rs  lockless_hashmap.rs  tt2.rs
crates/odonata/src/comms/: bench.rs  json_rpc.rs  mod.rs  uci_server.rs
crates/odonata/src/domain/: bound.rs  engine.rs  info.rs  material.rs  search_options.rs  search_results.rs  trail.rs  tree.rs
crates/odonata/src/eg/: endgame.rs  zugzwang.rs
crates/odonata/src/eval/: calc.rs  eval.rs  evaluation.rs  feature.rs  hardcoded_weights.rs  material_balance.rs  mod.rs  pmvt.rs  pst.rs  recognizer.rs  score.rs  scorer.rs  scoring.rs  see.rs  weight.rs  weight3.rs
crates/odonata/src/infra/: config.rs  metric.rs  mod.rs  profiler.rs  resources.rs  serde.rs  testing.rs  utils.rs  version.rs
crates/odonata/src/other/: outcome.rs  parse.rs  perft.rs  phaser.rs  tags.rs
crates/odonata/src/search/: algo.rs  alphabeta.rs  aspiration.rs  controller.rs  counter_move.rs  engine.rs  extensions.rs  futility.rs  history_heuristic.rs  iterative_deepening.rs  killers.rs  lmp.rs  lmr.rs  mate_distance.rs  mod.rs  move_orderer.rs  move_time_estimator.rs  nmp.rs  node.rs  pvs.rs  qs.rs  razor.rs  restrictions.rs  reverse_futility.rs  search_explainer.rs  stack.rs  timecontrol.rs
crates/odonata/src/trace/: debug.rs  logger.rs  stat.rs
crates/odonata/src/tune/: tuning.rs
docs/: README.md  changelog.md  compilation.md  credits.md  notes.txt  python.md  todo.md  useful_commands.txt
graveyard/: iterative_deepening.new.rs  iterative_deepening12pm.rs  junk_tt2.rs  metrics2.rs  search_results.new.rs  search_results.old.rs  search_results12pm.rs  uci.new.rs  uci.old.rs
python/: api-design.txt  build.py  odonata.py  old.py
resources/: bk.epd  config.toml  figment.toml  old-format.toml
src/: attacks.rs  bitboard.rs  bits.rs  board.rs  boards.rs  bound.rs  castling.rs  catalog.rs  clock.rs  clock3.rs  config.rs  debug.rs  domain.rs  epd.rs  eval.rs  exam.rs  game.rs  globals.rs  hasher.rs  junk.rs  lib.rs  logger.rs  main.rs  match.rs  material.rs  movegen.rs  movelist.rs  mv.rs  other.rs  outcome.rs  parse.rs  perft.rs  phase.rs  phaser.rs  piece.rs  position.rs  prelude.rs  pvtable.rs  repetition.rs  repitition.rs  (+13 more)
src/bin.old/: profile.rs
src/bitboard/: attacks.rs  bb_classical.rs  bb_hyperbola.rs  bb_magic.rs  bb_sliders.rs  bitboard.rs  castling.rs  mod.rs  precalc.rs  square.rs
src/bits/: bb_classical.rs  bb_hyperbola.rs  bb_magic.rs  bb_sliders.rs  bitboard.rs  castling.rs  precalc.rs  square.rs
src/board/: analysis.rs  boardbuf.rs  boardcalcs.rs  catalog.rs  makemove.rs  mod.rs  movegen.rs  movemaker.rs  multiboard.rs  rules.rs
src/boards/: analysis.rs  board.rs  boardcalcs.rs  makemove.rs  movegen.rs  repetition.rs  rules.rs
src/cache/: hasher.rs  lockless_hashmap.rs  mod.rs  tt.rs  tt2.rs
src/comms/: bench.rs  console.rs  json_rpc.rs  mod.rs  uci.new.rs  uci.rs  uci_server.rs
src/domain/: engine.rs  game.rs  info.rs  material.rs  mod.rs  player.rs  trail.rs  (+2 more)
(+97 files in other folders)
