[workspace]
resolver = "2"

members = [
    "crates/*",
]




[profile.dev]
opt-level = 3
incremental = true
debug = true  # allow profiling of the  main executable 
split-debuginfo = "unpacked"
codegen-units = 256

[profile.test]
opt-level = 3
incremental = true
debug = true  # allow profiling of the  main executable 
codegen-units = 256
split-debuginfo = "off"  # for hotspot profiler disassembly


[profile.release]
opt-level = 3
incremental = false
codegen-units = 256
debug = true  # allow profiling of the  main executable 
split-debuginfo = "unpacked"

# this profile purely because rustlags is used for tournament builds and this ensures they
# get placed in a seperate build directory
# avoiding rebuilds when chaging between release / tournament
[profile.tournament]
inherits="release"

