[package]
name = "odonata-engine"
version = "0.8.0"
authors = [
  "andy watkins <andy@webcalculator.com>",
  "mark raistrick <mark.raistrick@gmail.com>",
]
description = "A UCI compliant chess engine"
edition = "2021"
homepage = "https://github.com/akanalytics/odonata"
keywords = ["chess"]
license = "GPL-2.0-or-later"
repository = "https://github.com/akanalytics/odonata"
readme = "docs/README.md"
categories=["games"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odonata-base.workspace = true
odonata-hce.workspace = true
arrayvec = {version = "0.7", features = ["serde"]}
bitflags = { version = "2.4.0", features = ["serde"] }
clap = {version = "4.3.2", features = ["derive"]}
once_cell = "1.7"
rand = "0.8"
rand_chacha = "0.3"
regex = "1.4"
test-log = "0.2"
anyhow = {version = "1.0", features = ["backtrace"]}
backtrace = "0.3.64"
crossbeam-utils = "0.8.8"
config = "0.14"
flexi_logger = {version = "0.27.1", features = ["colors"]}
format_num = "0.1"
hdrhist = "0.5.0"
include_dir = "0.7.2"
indexmap = {version = "2.0", features = ["serde"]}
itertools = "0.12"
log = {version = "0.4", features = ["release_max_level_debug"]}
num-traits = "0.2"
petgraph = "0.6.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.3"
static_init = "1.0"
strum = "0.26"
strum_macros = "0.26"
tabled = "0.8.0"
thread_local = "1.1.4"
toml = { version = "0.8", features=["display", "parse", "indexmap"] }
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_debug", "log"] }
tabwriter = "1.2.1"
append-only-vec = "0.1.3"

[target.'cfg(target_os="linux")'.dependencies]
pprof = { version = "0.13", features = ["flamegraph"]}
perf-event = {version = "0.4.7"}


[dev-dependencies]
criterion = "0.5"
# test-log = "0.2.11"
test-log = { version = "0.2", features=["trace"]}
# pprof = {version = "0.11.0", features = ["flamegraph"]}
env_logger = "0.11"
# tracing = {version = "0.1.37", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}

[build-dependencies]
built = {version = "0.7", features = ["chrono", "semver", "git2"]}
# vergen = {git = "https://github.com/rustyhorde/vergen.git", tag="8.0.0-beta.8", features = ["build", "cargo", "git", "git2", "rustc", "si"]}

# lto = true

# [profile.dev]
# codegen-units = 256 
# debug = true # allow profiling of the  main executable 
# incremental = true 
# opt-level = 3 
# split-debuginfo = "unpacked" 

# [profile.test]
# codegen-units = 256 
# debug = true # allow profiling of the  main executable 
# incremental = true 
# opt-level = 2 
# split-debuginfo = "off" # for hotspot profiler disassembly

# [profile.release]
# codegen-units = 256
# debug = 1 #true # allow profiling of the  main executable 
# incremental = false
# opt-level = 3 
# split-debuginfo = "unpacked" 
# lto = true
# debug-assertions = true


[lib]
# bug in criterion<->cargo interaction https://bheisler.github.io/criterion.rs/book/faq.html
bench = false
test = true

[features]
default = ["unchecked_indexing", "remove_logging"]
# profiler = ["pprof", "perf-event"]
remove_logging = []
metrics = []
unchecked_indexing = []
nnue = []

# RUSTFLAGS="-C target-cpu=native" cargo bench

# in .cargo/config.toml
# rustflags = ["-C target-cpu=native"]

# rustc --print cfg
# rustc -C target-cpu=native --print cfg


