[package]
rust-version.workspace = true
version.workspace = true
categories.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
name = "odonata-engine"
readme = "docs/README.md"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
odonata-base.workspace = true

anyhow.workspace = true
backtrace.workspace = true
byteorder.workspace = true
clap.workspace = true
crossbeam-utils.workspace = true
fs-err.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num-traits.workspace = true
once_cell.workspace = true
postcard.workspace = true
rand_chacha.workspace = true
rand.workspace = true
regex.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
simba.workspace = true
strum_macros.workspace = true
strum.workspace = true
tabled.workspace = true
tabwriter.workspace = true
test-log.workspace = true
toml.workspace = true
tracing.workspace = true

[target.'cfg(target_os="linux")'.dependencies]
pprof.workspace = true
perf-event.workspace = true

[build-dependencies]
include_dir = "0.7"
built = {version = "0.7", features = ["chrono", "semver", "git2"]}


[dev-dependencies]
# criterion.workspace = true
test-log.workspace = true
tracing-subscriber.workspace = true
pretty_assertions.workspace = true
testresult.workspace = true
# pprof = {version = "0.11.0", features = ["flamegraph"]}
# test-log = "0.2.11"
# tracing = {version = "0.1.37", default-features = false}


# [profile.dev]
# codegen-units = 256 
# debug = true # allow profiling of the  main executable 
# incremental = true 
# opt-level = 3 
# split-debuginfo = "unpacked" 

# [profile.test]
# codegen-units = 256 
# debug = true # allow profiling of the  main executable 
# incremental = true 
# opt-level = 2 
# split-debuginfo = "off" # for hotspot profiler disassembly

# [profile.release]
# codegen-units = 256
# debug = 1 #true # allow profiling of the  main executable 
# incremental = false
# opt-level = 3 
# split-debuginfo = "unpacked" 
# lto = true
# debug-assertions = true


[lib]
bench = false
test = true

[features]
default = ["unchecked_indexing", "remove_logging"]
# profiler = ["pprof", "perf-event"]
remove_logging = []
metrics = []
unchecked_indexing = []
nnue = []

# RUSTFLAGS="-C target-cpu=native" cargo bench

# in .cargo/config.toml
# rustflags = ["-C target-cpu=native"]

# rustc --print cfg
# rustc -C target-cpu=native --print cfg
