[package]
name = "odonata-hce"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true


[dependencies]
odonata-base = { path = "../odonata-base" }
itertools.workspace = true
env_logger.workspace = true
# log = { version = "0.4", features = ["release_max_level_debug"] }
tracing.workspace = true
anyhow.workspace = true
once_cell.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
toml.workspace = true
indexmap.workspace = true
num-traits.workspace = true
tabled = "0.8.0"
tabwriter.workspace = true
# derive_more = "0.99"



[dev-dependencies]
test-log = {version = "0.2", features = ["trace"]}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
